--- a/Tic-Tac-Toe/index.html
+++ b/Tic-Tac-Toe/index.html
@@ -3,6 +3,12 @@
 <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Kaushan+Script">
 <style>
+.remove{
+  display: none;
+}
+.a{
+  length:20px;
+}
 body{
   background: url('ex.jpg');
   text-align: center;
